# DeclarativeLocalSearch

./: README.md
TSPmodelling/: tsp.idp
TSPmodelling/instances/: a280.tsp.struc  att48.tsp.struc  bayg29.tsp.struc  bays29.tsp.struc  berlin52.tsp.struc  bier127.tsp.struc  br17.atsp.struc  brazil58.tsp.struc  brg180.tsp.struc  burma14.tsp.struc  ch130.tsp.struc  ch150.tsp.struc  d198.tsp.struc  dantzig42.tsp.struc  eil101.tsp.struc  eil51.tsp.struc  eil76.tsp.struc  fl417.tsp.struc  fri26.tsp.struc  ft53.atsp.struc  ft70.atsp.struc  ftv170.atsp.struc  ftv33.atsp.struc  ftv35.atsp.struc  ftv38.atsp.struc  ftv44.atsp.struc  ftv47.atsp.struc  ftv55.atsp.struc  ftv64.atsp.struc  ftv70.atsp.struc  gil262.tsp.struc  gr120.tsp.struc  gr137.tsp.struc  gr17.tsp.struc  gr202.tsp.struc  gr21.tsp.struc  gr229.tsp.struc  gr24.tsp.struc  gr48.tsp.struc  gr96.tsp.struc  (+39 more)
TSPmodelling/results/: all.csv
idpbinary/include/: lualib.h
idpbinary/lib/: liblua.so.5.1.4  libminisatid.so.3.12.0
idpbinary/share/std/: idp_intern.idp
idpsourcecode/: CMakeLists.txt
idpsourcecode/data/share/std/: LTC.idp
idpsourcecode/docs/official/idp-latex/: .gitignore  idp-latex-no-theorem.tex  idp-latex.tex  includes-no-theorems.tex  krrlib.bib  theorems.tex
idpsourcecode/docs/technical/: Dockerfile  HOW-TO-RELEASE.txt  RELEASE-DOCKER-IMAGE.md
idpsourcecode/lib/SPASS-3.7/: configure
idpsourcecode/lib/SPASS-3.7/SPASS/: misc.h
idpsourcecode/lib/SPASS-3.7/doc/texinfo/: script.info
idpsourcecode/lib/interactiveShell/: CMakeLists.txt  linenoise.c  linenoise.h
idpsourcecode/lib/lua/: .gitignore  CMakeLists.txt
idpsourcecode/lib/lua/src/: CMakeLists.txt  lauxlib.cpp  lauxlib.h  linit.cpp  lua.h
idpsourcecode/lib/minisatid/src/inferences/: Tasks.cpp
idpsourcecode/lib/minisatid/src/parser/: CommandLineOptions.hpp
idpsourcecode/lib/minisatid/src/satsolver/: SATSolver.cpp  SATUtils.cpp  SATUtils.hpp
idpsourcecode/lib/minisatid/src/satsolver/heuristics/: Heuristics.cpp  Heuristics.hpp
idpsourcecode/lib/minisatid/src/satsolver/minisat/: Solver.cpp
idpsourcecode/lib/minisatid/src/space/: Options.cpp
idpsourcecode/lib/minisatid/tests/instances/ecnf/cp/: UNSATcpprod.ecnf
idpsourcecode/src/: CMakeLists.txt  options.cpp  options.hpp
idpsourcecode/src/inferences/definitionevaluation/: CalculateDefinitions.cpp
idpsourcecode/src/inferences/grounding/: Grounding.hpp
idpsourcecode/src/inferences/localsearch/: BestImprovementSearch.cpp  BestImprovementSearch.hpp  FirstImprovementSearch.cpp  FirstImprovementSearch.hpp  ILS.cpp  ILS.h  LargeNeighbourhoodSearch.cpp  LargeNeighbourhoodSearch.h  Localsearch.cpp  Localsearch.hpp  MoveModelling.cpp  MoveModelling.hpp  NeighborhoodMove.cpp  NeighborhoodMove.hpp  TabuSearch.cpp  TabuSearch.hpp  notes.txt
idpsourcecode/src/inferences/modelIteration/: ModelIterator.cpp
idpsourcecode/src/inferences/querying/xsb/: FormulaClause.hpp  FormulaClauseBuilder.cpp  PrologProgram.cpp  PrologProgram.hpp  XSBInterface.cpp  XSBInterface.hpp  XSBToIDPTranslator.cpp  XSBToIDPTranslator.hpp
idpsourcecode/src/printers/: tptpprinter.hpp
idpsourcecode/src/theory/: TheoryUtils.cpp  TheoryUtils.hpp
idpsourcecode/src/theory/transformations/: AddFuncConstraints.hpp  GraphFuncsAndAggs.cpp  GraphFuncsAndAggs.hpp
idpsourcecode/src/utils/: FileManagement.cpp  FileManagement.hpp
idpsourcecode/tests/: progressiontest.idp
idpsourcecode/tests/entails/: trivial.idp  trivial2.idp  trivial3.idp
idpsourcecode/tests/mx/simplemx/: emptysetcondition.idp  regression_xsb_constructorbug.idp
idpsourcecode/tests/parser/validinput/: string_looking_like_number.idp
idpsourcecode/tests/simple/: bram.idp  bram2.idp
